--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,8 +25,8 @@
   <tbody>
   <% @guider.slot_ranges.each do |slot_range| %>
     <tr>
-      <td><%= "#{slot_range.from} ➡ onwards" %></td>
-      <td><%= link_to edit_user_slot_range_path(@guider, slot_range), title: "Edit Slot Range #{slot_range.from.to_s}", :class => 'btn btn-info' do %><span class="glyphicon glyphicon-pencil"></span><span class="sr-only">Edit Slot Range</span><% end %></td>
+      <td><%= "#{slot_range.display_title}" %></td>
+      <td><%= link_to edit_user_slot_range_path(@guider, slot_range), title: "Edit Slot Range #{slot_range.display_title}", :class => 'btn btn-info' do %><span class="glyphicon glyphicon-pencil"></span><span class="sr-only">Edit Slot Range</span><% end %></td>
     </tr>
   <% end %>
   <% if @guider.slot_ranges.empty? %>
