Improve initalising of JS modules for project
- now use the concept of data-module attribute to trigger the
  initalising of a JS module
- Ensure all the JS is in assets/javascripts folder
- Created multi-checkbox module which can be potentially reuseable
- Created sortable-list module which uses ListJs to sort/filter
  a list of 'things' - used on guiders list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,20 +13,20 @@
 
 <% content_for :body_end do %>
   <script>
-  var loadedCalendars = [];
+  var loadedModules = [];
   $(document).on('turbolinks:load', function() {
-    var calendars = $('[data-calendar]');
+    var modules = $('[data-module]');
 
-    if (loadedCalendars.length) {
+    if (loadedModules.length) {
       return;
     }
 
-    calendars.each(function() {
-      var calendarEl = $(this),
-      calendarType = calendarEl.data('calendar'),
-      config = calendarEl.data('config');
+    modules.each(function() {
+      var $el = $(this),
+      type = $el.data('module'),
+      config = $el.data('config');
 
-      loadedCalendars.push(new PWTAP[calendarType](calendarEl, config));
+      loadedModules.push(new PWTAP[type]($el, config));
     });
   });
   </script>
