--- a/app/views/slot_ranges/_form.html.erb
+++ b/app/views/slot_ranges/_form.html.erb
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="form-group">
-      <div data-calendar="GuiderSlotPickerCalendar" data-events=".slots-data" data-events-common="calendar-common" data-config='{"slotDurationMinutes": 70}'></div>
+      <div data-module="GuiderSlotPickerCalendar" data-events=".slots-data" data-events-common="calendar-common" data-config='{"slotDurationMinutes": 70}'></div>
     </div>
   </div>
   <%= f.hidden_field :slots, class: 'slots-data', value: @slot_range_json %>
