--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -3,10 +3,10 @@
     <li><a href="<%= root_path %>">Home</a></li>
     <li><a href="<%= users_path %>">Manage Guiders</a></li>
     <li><a href="<%= edit_user_path(@guider) %>">Edit User &quot;<%=@guider.name %>&quot;</a></li>
-    <li class="active">Edit Slot Range</li>
+    <li class="active">New Schedule</li>
   </ol>
 
-  <h1>Edit User "<%=@guider.name %>" slot range from <%=@slot_range.from %></h1>
+  <h1>New schedule for "<%=@guider.name %>"</h1>
 </div>
 
 <%= render "form" %>
