Minor UI alteration to the list of groups
- added caption to improve accessibility
- pushed actions to right side of table

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,6 +13,11 @@
       <p class="no-content t-notice">No groups.</p>
     <% else %>
       <table class="table table-bordered">
+        <caption><span class="sr-only">List of groups</span></caption>
+        <colgroup>
+          <col width="99%">
+          <col width="1%">
+        </colgroup>
         <thead>
           <tr class="table-header">
             <th>Name</th>
