--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,9 @@
   <h1>Edit User "<%=@guider.name %>"</h1>
 </div>
 
-<%= link_to "Add schedule", new_user_schedule_path(@guider), class: 'btn btn-primary' %>
+<%= link_to new_user_schedule_path(@guider), class: 'btn btn-primary' do %>
+  <span class="glyphicon glyphicon-calendar"></span> Add schedule
+<% end %>
 
 <table class="table table-striped table-bordered table-hover">
   <caption><span class="sr-only">List of guiders</span></caption>
