--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <%= link_to new_user_schedule_path(@guider), class: 'btn btn-primary' do %>
-  <span class="glyphicon glyphicon-calendar"></span> Add schedule
+  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Add schedule
 <% end %>
 
 <table class="table table-striped table-bordered table-hover">
@@ -27,8 +27,8 @@
   <tbody>
   <% @schedules.each do |schedule| %>
     <tr>
-      <td><%= "#{schedule.title}" %></td>
-      <td><%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", :class => 'btn btn-info' do %><span class="glyphicon glyphicon-pencil"></span><span class="sr-only">Edit Schedule</span><% end %></td>
+      <td><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= "#{schedule.title}" %></td>
+      <td><%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Schedule</span><% end %></td>
     </tr>
   <% end %>
   <% if @schedules.empty? %>
