--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,31 +1,38 @@
 <h1>Manage Guiders</h1>
 
-<div id="users" data-module="SortableList" data-config='{"valueNames": ["name"]}'>
+<div id="users" data-module="SortableList" data-config='{"valueNames": ["name", "group"]}'>
   <form class="form-inline">
     <div class="form-group">
       <label for="user-search">Search</label>
-      <input class="search form-control" name="user-search" id="user-search" placeholder="Search">
+      <input class="search form-control t-search" name="user-search" id="user-search" placeholder="Search">
     </div>
   </form>
   <table class="table table-striped table-bordered table-hover" data-module="MultiCheckbox" data-config='{"selectedClassName":"info"}'>
     <caption><span class="sr-only">List of guiders</span></caption>
     <colgroup>
       <col width="1%">
-      <col width="98%">
+      <col width="54%">
+      <col width="44%">
       <col width="1%">
     </colgroup>
     <thead>
       <tr>
         <th><label for="select-all"><input type="checkbox" class="select-all" data-multi-checkbox="all"> <span class="sr-only">Select All</span></label></th>
         <th><span class="sort" data-sort="name">Name</span></th>
+        <th><span class="sort" data-sort="group">Groups</span></th>
         <th>Actions</th>
       </tr>
     </thead>
     <tbody class="list">
       <% @guiders.each do |guider| %>
-      <tr data-multi-checkbox-group>
+      <tr data-multi-checkbox-group class="t-guider">
         <td><label for="guider_<%= guider.id %>"><input data-multi-checkbox="item" type="checkbox" name="guider_<%= guider.id %>" id="guider_<%= guider.id %>"><span class="sr-only">Select <%= guider.name %></span></label></td>
         <td><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="name"><%= guider.name %></span></td>
+        <td>
+          <% guider.groups.each do |group| %>
+            <span class="label label-info group t-group"><%= group.name %></span>
+          <% end %>
+        </td>
         <td><%= link_to edit_user_path(guider), title: "Edit #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Guider</span><% end %></td>
       </tr>
       <% end %>
