--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
       <% @guiders.each do |guider| %>
       <tr data-multi-checkbox-group>
         <td><label for="guider_<%= guider.id %>"><input data-multi-checkbox="item" type="checkbox" name="guider_<%= guider.id %>" id="guider_<%= guider.id %>"><span class="sr-only">Select <%= guider.name %></span></label></td>
-        <td class="name"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= guider.name %></td>
+        <td><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="name"><%= guider.name %></span></td>
         <td><%= link_to edit_user_path(guider), title: "Edit #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Guider</span><% end %></td>
       </tr>
       <% end %>
