--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -28,7 +28,14 @@
   <% @schedules.each do |schedule| %>
     <tr>
       <td><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= "#{schedule.title}" %></td>
-      <td><%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Schedule</span><% end %></td>
+      <td>
+        <%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Schedule</span><% end %>
+        <% if schedule.destroyable? %>
+          <%= button_to user_schedule_path(@guider, schedule), method: :delete, title: 'Delete Schedule', class: 'btn btn-danger t-delete' do %>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span><span class="sr-only">Delete Schedule</span>
+          <% end %>
+        <% end %>
+      </td>
     </tr>
   <% end %>
   <% if @schedules.empty? %>
