--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,8 +15,8 @@
 <table class="table table-striped table-bordered table-hover">
   <caption><span class="sr-only">List of guiders</span></caption>
   <colgroup>
-    <col width="98%">
-    <col width="1%">
+    <col width="91%">
+    <col width="9%">
   </colgroup>
   <thead>
     <tr>
@@ -28,7 +28,14 @@
   <% @schedules.each do |schedule| %>
     <tr>
       <td><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= "#{schedule.title}" %></td>
-      <td><%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Schedule</span><% end %></td>
+      <td>
+        <%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Schedule</span><% end %>
+        <% if schedule.destroyable? %>
+          <%= link_to user_schedule_path(@guider, schedule), method: :delete, title: 'Delete Schedule', class: 'btn btn-danger t-delete' do %>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span><span class="sr-only">Delete Schedule</span>
+          <% end %>
+        <% end %>
+      </td>
     </tr>
   <% end %>
   <% if @schedules.empty? %>
