--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,11 +30,18 @@
       <td><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= "#{schedule.title}" %></td>
       <td nowrap="true">
         <%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Schedule</span><% end %>
-        <% if schedule.destroyable? %>
-          <%= link_to user_schedule_path(@guider, schedule), method: :delete, title: 'Delete Schedule', class: 'btn btn-danger t-delete' do %>
+        <div class="inline-button-to-container">
+          <%= button_to(
+              user_schedule_path(@guider, schedule),
+              method: :delete,
+              title: 'Delete Schedule',
+              class: 'btn btn-danger t-delete',
+              disabled: !schedule.destroyable?,
+              data: {confirm: 'Are you sure you want to delete this schedule?'}
+            ) do %>
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span><span class="sr-only">Delete Schedule</span>
           <% end %>
-        <% end %>
+        </div>
       </td>
     </tr>
   <% end %>
