--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,16 +27,36 @@
   <tbody>
   <% @schedules.each do |schedule| %>
     <tr>
-      <td><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= "#{schedule.title}" %></td>
+      <td>
+        <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= schedule.title %>
+        <% unless schedule.modifiable? %>
+          <p>
+            <b>
+            This schedule cannot be modified as it starts less than six weeks from now.
+            Create a new schedule to change this guider's bookable slots.
+            </b>
+          </p>
+        <% end %>
+      </td>
       <td nowrap="true">
-        <%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Schedule</span><% end %>
+        <% if schedule.modifiable? %>
+          <%= link_to edit_user_schedule_path(@guider, schedule), title: "Edit Schedule #{schedule.title}", class: 'btn btn-info t-edit' do %>
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            <span class="sr-only">Edit Schedule</span>
+          <% end %>
+        <% else %>
+          <span class="btn btn-info disabled">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            <span class="sr-only">Edit Schedule (Disabled)</span>
+          </span>
+        <% end %>
         <div class="inline-button-to-container">
           <%= button_to(
               user_schedule_path(@guider, schedule),
               method: :delete,
               title: 'Delete Schedule',
               class: 'btn btn-danger t-delete',
-              disabled: !schedule.destroyable?,
+              disabled: !schedule.modifiable?,
               data: { confirm: "Are you sure you want to delete the schedule \"#{schedule.title}\"?" }
             ) do %>
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span><span class="sr-only">Delete Schedule</span>
