Show a better schedule title in Schedules#edit

--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -6,7 +6,7 @@
     <li class="active">Edit Schedule</li>
   </ol>
 
-  <h1>Edit User "<%=@guider.name %>" schedule from <%=@schedule.start_at %></h1>
+  <h1>Edit User "<%=@guider.name %>" schedule "<%=@schedule.title %>"</h1>
 </div>
 
 <%= render "form" %>
