Create / assign group to guiders
Creates (if necessary) and assigns the group to the specified guiders.
This will always appear successful as when there is already an
associated group the guider is simply skipped over.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import 'fullcalendar';
 @import 'daterangepicker-bs3';
 
+@import 'components/**/*';
+
 .fc-unthemed {
   .fc-today {
     background: #fff;
