--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,49 +1,64 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Telephone Appointment planner</a></li>
-    <li class="active">Groups</li>
+    <li class="active">Guider Groups</li>
   </ol>
 
-  <h1>Groups</h1>
+  <h1>Guider Groups</h1>
+</div>
+
+<p class="lead">
+  <%= link_to users_path do %>
+    <span class="glyphicon glyphicon-chevron-left"></span> Cancel, back to guiders
+  <% end %>
+</p>
+
+<h2>Add/remove guider groups</h2>
+<p class="lead">Add or remove from the list below to set the group memberships for these guiders.</p>
+
+<div class="panel panel-warning">
+  <div class="panel-heading">
+    <h4>Guiders affected by this change:</h4>
+  </div>
+  <div class="panel-body">
+    The guiders affected will be: <strong class="t-affected"><%= @guiders.pluck(:name).to_sentence %></strong>.
+  </div>
 </div>
 
 <div class="row">
-  <div class="col-md-12">
-    <% if @groups.empty? %>
-      <p class="no-content t-notice">No groups.</p>
-    <% else %>
-      <table class="table table-bordered">
-        <caption><span class="sr-only">List of groups</span></caption>
-        <colgroup>
-          <col width="99%">
-          <col width="1%">
-        </colgroup>
-        <thead>
-          <tr class="table-header">
-            <th>Name</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @groups.each do |group| %>
-            <tr class="t-group">
-              <td><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> <%= group.name %></td>
-              <td><%=
-                    link_to(
-                      group,
-                      method: :delete,
-                      class: 'btn btn-danger t-delete',
-                      title: "Delete #{group.name} group",
-                      data: { confirm: "Are you sure you want to delete the group #{group.name}?" }
-                    ) do
-                  %>
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> <span class="sr-only">Delete</span>
-                  <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    <% end %>
+  <div class="col-md-6 border-bottom">
+    <table class="table">
+      <tr class="well">
+        <td colspan="2">
+          <div class="row">
+            <div class="col-lg-12">
+              <%= form_for Group.new, url: groups_path(user_ids: params[:user_ids]), class: 'js-form' do |f| %>
+                <div class="input-group">
+                  <%= f.text_field :name, class: 'form-control js-group-input t-group', placeholder: 'Add a new group' %>
+                  <span class="input-group-btn">
+                    <%= f.button class: 'btn btn-primary js-button t-add-group' do %>
+                      <span class="glyphicon glyphicon-plus"></span>
+                      Add group
+                    <% end %>
+                  </span>
+                </div>
+              <% end %>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <% @groups.each do |group| %>
+        <tr>
+          <td class="lead">
+            <span class="label label-info"><%= group.name %></span>
+          </td>
+          <td class="lead">
+            <a href="#" class="js-remove pull-right">
+              <span class="glyphicon glyphicon-remove"></span>
+            </a>
+          </td>
+        </tr>
+      <% end %>
+    </table>
   </div>
 </div>
