Working on two calendar views for guiders - personal and company wide
- currently displayed on the groups index and will need to be moved
  once we have the routes set up
- uses full calendar scheduler - swapped gem for fullcalendar to
  use one from rails-assets.org
- company wide calendar uses random names and appointments for now
  will need to swap that code out for feeds of data

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import 'govuk_admin_template';
 @import 'fullcalendar';
+@import 'fullcalendar-scheduler';
 @import 'daterangepicker-bs3';
+@import 'qTip2';
 
 .fc-unthemed {
   .fc-today {
@@ -42,7 +44,23 @@
 }
 
 .inline-button-to-container {
-  display:inline-block;
+  display: inline-block;
+}
+
+.guiders-appointments-calendar {
+  .fc-resource-cell {
+    height: 150px;
+    white-space: nowrap;
+  }
+
+  th {
+    border-width: 0;
+    overflow: hidden;
+  }
+
+  .fc-resource-cell > div {
+    transform: translateY(120px) rotate(-90deg);
+  }
 }
 
 .guider__action-panel {
