Correct caption for list of schedules table

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <table class="table table-striped table-bordered table-hover">
-  <caption><span class="sr-only">List of guiders</span></caption>
+  <caption><span class="sr-only">List of schedules for <%= @guider.name %></span></caption>
   <colgroup>
     <col width="91%">
     <col width="9%">
