Creating a graphical view of schedules
- shows six week window and visual indicates whether a schedule is editable or not
- altered schedule model's end_at method to take only a second off rather than a day
- improved wording of uneditable schedule sentence

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import 'govuk_admin_template';
 @import 'fullcalendar';
 @import 'daterangepicker-bs3';
+@import 'components/*';
 
 .fc-unthemed {
   .fc-today {
