--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Manage Guiders</h1>
 
-<div id="users" data-module="SortableList" data-config='{"valueNames": ["name", "group"]}'>
+<div id="users" data-module="SortableList" data-config='{"valueNames": ["name", <%= @groups.map { |group| "\"#{dom_id(group)}\"" }.join(', ') %>]}'>
   <form class="form-inline">
     <div class="form-group">
       <label for="user-search">Search</label>
@@ -33,9 +33,9 @@
             </label>
           </td>
           <td><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="name"><%= guider.name %></span></td>
-          <td class="group">
+          <td>
             <% guider.groups.each do |group| %>
-              <span class="label label-info t-group"><%= group.name %></span>
+              <span class="label label-info <%= dom_id(group) %> t-group"><%= group.name %></span>
             <% end %>
           </td>
           <td><%= link_to edit_user_path(guider), title: "Edit #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Guider</span><% end %></td>
