Improvements to the multi select functionality for guiders
- created a module called guiders-multi-action which
  handles showing the action panel
- added a bunch of pub/sub methods to application.js
- published an event in the multi-checkbox module
  which is then listened for in the guiders-multi-action
  module
- published a 'searchComplete' event in sortable-list
  which is also listened for in guiders-multi-action
- altered breadcrumb for groups page
- added action button for managing tags, and altered
  schedule edit to a calendar glyphicon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,6 @@
 @import 'fullcalendar';
 @import 'daterangepicker-bs3';
 
-@import 'components/**/*';
-
 .fc-unthemed {
   .fc-today {
     background: #fff;
@@ -45,4 +43,18 @@
 
 .inline-button-to-container {
   display:inline-block;
+}
+
+.guider__action-panel {
+  background: #ddd;
+  border-top: 1px solid #000;
+  bottom: 0;
+  display: none;
+  font-size: 16px;
+  font-weight: bold;
+  left: 0;
+  padding: 1em;
+  position: fixed;
+  text-align: center;
+  width: 100%;
 }
