--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,17 +1,12 @@
 <div class="page-header">
   <ol class="breadcrumb">
-    <li><a href="<%= root_path %>">Telephone Appointment planner</a></li>
-    <li class="active">Guider Groups</li>
+    <li><a href="<%= root_path %>">Home</a></li>
+    <li><a href="<%= users_path %>">Manage Guiders</a></li>
+    <li class="active">Manage groups</li>
   </ol>
 
-  <h1>Guider Groups</h1>
+  <h1>Manage groups</h1>
 </div>
-
-<p class="lead">
-  <%= link_to users_path do %>
-    <span class="glyphicon glyphicon-chevron-left"></span> Cancel, back to guiders
-  <% end %>
-</p>
 
 <h2>Add/remove guider groups</h2>
 <p class="lead">Add or remove from the list below to set the group memberships for these guiders.</p>
