--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,54 +1,55 @@
 <h1>Manage Guiders</h1>
 
-<div id="users" data-module="SortableList" data-config='{"valueNames": ["name", <%= @groups.map { |group| "\"#{dom_id(group)}\"" }.join(', ') %>]}'>
-  <form class="form-inline">
-    <div class="form-group">
-      <label for="user-search">Search</label>
-      <input class="search form-control t-search" name="user-search" id="user-search" placeholder="Search">
-    </div>
-  </form>
-  <table class="table table-striped table-bordered table-hover" data-module="MultiCheckbox" data-config='{"selectedClassName":"info"}'>
-    <caption><span class="sr-only">List of guiders</span></caption>
-    <colgroup>
-      <col width="1%">
-      <col width="54%">
-      <col width="44%">
-      <col width="1%">
-    </colgroup>
-    <thead>
-      <tr>
-        <th><label for="select-all"><input type="checkbox" class="select-all" data-multi-checkbox="all"> <span class="sr-only">Select All</span></label></th>
-        <th><span class="sort" data-sort="name">Name</span></th>
-        <th><span class="sort" data-sort="group">Groups</span></th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody class="list">
-      <% @guiders.each do |guider| %>
-        <tr data-multi-checkbox-group class="t-guider guider">
-          <td>
-            <label for="guider_<%= guider.id %>">
-              <input data-multi-checkbox="item" type="checkbox" name="guider_<%= guider.id %>" id="guider_<%= guider.id %>" value="<%= guider.id %>" class="guider__checkbox t-checkbox">
-              <span class="sr-only">Select <%= guider.name %></span>
-            </label>
-          </td>
-          <td><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="name"><%= guider.name %></span></td>
-          <td>
-            <% guider.groups.each do |group| %>
-              <span class="label label-info <%= dom_id(group) %> t-group"><%= group.name %></span>
-            <% end %>
-          </td>
-          <td><%= link_to edit_user_path(guider), title: "Edit #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only">Edit Guider</span><% end %></td>
+<div data-module="GuidersMultiAction">
+  <div id="guiders" data-module="SortableList" data-config='{"valueNames": ["name", <%= @groups.map { |group| "\"#{dom_id(group)}\"" }.join(', ') %>]}'>
+    <form class="form-inline">
+      <div class="form-group">
+        <label for="user-search">Search</label>
+        <input class="search form-control t-search" name="user-search" id="user-search" placeholder="Search">
+      </div>
+    </form>
+    <table class="table table-striped table-bordered table-hover" data-module="MultiCheckbox" data-config='{"selectedClassName":"info"}'>
+      <caption><span class="sr-only">List of guiders</span></caption>
+      <colgroup>
+        <col width="1%">
+        <col width="54%">
+        <col width="44%">
+        <col width="1%">
+      </colgroup>
+      <thead>
+        <tr>
+          <th><label for="select-all"><input type="checkbox" class="select-all" data-multi-checkbox="all"> <span class="sr-only">Select All</span></label></th>
+          <th><span class="sort" data-sort="name">Name</span></th>
+          <th>Groups</th>
+          <th>Actions</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
-<div class="guider__action-panel t-action-panel">
-  With the <span class="guider__number-selected t-selected">0</span> guiders selected
-  <select name="action" class="js-action-list t-action">
-    <option value="/groups">Add/remove groups</option>
-  </select>
-  <a class="btn btn-primary js-go-link t-go" href="/">Go</a>
+      </thead>
+      <tbody class="list">
+        <% @guiders.each do |guider| %>
+          <tr data-multi-checkbox-group class="t-guider guider">
+            <td>
+              <label for="guider_<%= guider.id %>">
+                <input data-multi-checkbox="item" type="checkbox" name="guider_<%= guider.id %>" id="guider_<%= guider.id %>" value="<%= guider.id %>" class="guider__checkbox t-checkbox">
+                <span class="sr-only">Select <%= guider.name %></span>
+              </label>
+            </td>
+            <td><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="name"><%= guider.name %></span></td>
+            <td>
+              <% guider.groups.each do |group| %>
+                <span class="label label-info <%= dom_id(group) %> t-group"><%= group.name %></span>
+              <% end %>
+            </td>
+            <td nowrap="true"><%= link_to "/groups?user_ids=#{guider.id}", title: "Manage groups for #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-tag" aria-hidden="true"></span><span class="sr-only">Manage groups for #{guider.name}</span><% end %> <%= link_to edit_user_path(guider), title: "Manage schedules for #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span><span class="sr-only">Manage schedules for #{guider.name}</span><% end %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="guider__action-panel t-action-panel" data-action-panel>
+    With the <span class="guider__number-selected t-selected" data-action-panel-selected-count>0</span> <span data-action-panel-selected-guiders></span> selected
+    <select name="action" class="t-action" data-action-panel-actions>
+      <option value="/groups">Add/remove groups</option>
+    </select>
+    <button class="btn btn-primary t-go" data-action-panel-go>Go</button>
+  </div>
 </div>
