Store and generate usable slots for users
This makes it easier to find an available slot for appointments.

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -3,7 +3,7 @@
 </h1>
 
 <h2>
-  Guider: <%= @appointment.user.name %>
+  Guider: <%= UsableSlot.where(appointment: @appointment).first.user.name %>
 </h2>
 
 <h2>
