Remove UsableSlot#appointment relation
It's a bit weird coupling these two things together, because later on we
will be allowing Appointments to be moved around to different times
overlaying the slots.

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -3,7 +3,7 @@
 </h1>
 
 <h2>
-  Guider: <%= UsableSlot.where(appointment: @appointment).first.user.name %>
+  Guider: <%= @appointment.user.name %>
 </h2>
 
 <h2>
