--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <% if current_user.resource_manager? %>
     <%= active_link_to 'Manage guiders', users_path, wrap_tag: :li %>
   <% end %>
-  <% if current_user.contact_centre_agent? %>
+  <% if current_user.agent? %>
     <%= active_link_to 'Create appointments', new_appointment_path, wrap_tag: :li %>
   <% end %>
 <% end %>
