Add 'Where did you hear about Pension Wise' to appointments/new

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import 'govuk_admin_template';
+@import 'select2';
+@import 'select2-bootstrap';
 @import 'fullcalendar';
 @import 'daterangepicker-bs3';
 @import 'components/*';
