--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Manage Guiders</h1>
 
 <div data-module="GuidersMultiAction">
-  <div id="guiders" data-module="SortableList" data-config='{"valueNames": ["name", <%= @groups.map { |group| "\"#{dom_id(group)}\"" }.join(', ') %>]}'>
+  <div id="guiders" data-module="SortableList" data-default-order='{"value": "name", "order": "asc"}' data-config='<%= sortable_list_config(@groups) %>'>
     <form class="form-inline">
       <div class="form-group">
         <label for="user-search">Search</label>
