--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,10 @@
 Welcome
+
+<div data-module="GuiderAppointmentsCalendar"></div>
+
+<div data-module="GuidersAppointmentsCalendar" class="guiders-appointments-calendar"></div>
+<style>
+[data-resource-id="guider_13"] {
+  background: #fff87c !important;
+}
+</style>
