Change appointments year_of_birth to date_of_birth

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -27,7 +27,7 @@
       <%= f.telephone_field :mobile, class: 't-mobile' %>
     </div>
     <div class="col-md-6">
-      <%= f.text_field :year_of_birth, class: 't-year-of-birth' %>
+      <%= f.date_field :date_of_birth, class: 't-date-of-birth' %>
       <%= f.text_field :memorable_word, class: 't-memorable-word', placeholder: 'Pension Wise will use this each time the customer is called' %>
       <%= f.text_area :notes, class: 't-notes', rows: 6, placeholder: 'Is the customer hard of hearing? Is English their first language? etc.' %>
       <%= f.check_box :opt_out_of_market_research, class: 't-opt-out-of-market-research' %>
