--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,7 +45,7 @@
       </tbody>
     </table>
   </div>
-  <div class="guider__action-panel t-action-panel" data-action-panel>
+  <div class="action-panel t-action-panel" data-action-panel>
     With the <span class="guider__number-selected t-selected" data-action-panel-selected-count>0</span> <span data-action-panel-selected-guiders></span> selected
     <select name="action" class="t-action" data-action-panel-actions>
       <option value="/groups">Add/remove groups</option>
