--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,7 +66,7 @@
   }
 }
 
-.guider__action-panel {
+.action-panel {
   background: #ddd;
   border-top: 1px solid #000;
   bottom: 0;
@@ -78,6 +78,7 @@
   position: fixed;
   text-align: center;
   width: 100%;
+  z-index: 1;
 }
 
 .appointment-availability-calendar {
