Reselecting a slot which has been clicked when errors are presented
- Force the appointment availability calendar to be a certain height
- Indicating required fields using a view helper
- Improve visibility of error when no slot has been selected

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,11 @@
   text-align: center;
   width: 100%;
 }
+
+.appointment-availability-calendar {
+  min-height: 500px;
+}
+
+.fc-view-container.error {
+  border: 1px solid #a94442;
+}
